<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:ignore="HardcodedText">

    <com.lockwood.compound.CompoundTextView
        android:id="@+id/compound"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas a laoreet augue, ut lobortis tortor. Praesent nunc leo, imperdiet vel consequat at, consectetur nec nunc. "
        app:drawableSize="24dp"
        app:drawableStart="@drawable/ic_arrow_forward"
        app:drawableTint="@color/accent"
        app:handleClickWithinDrawableBounds="true" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Drawable" />

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="Start" />

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Top" />

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/end"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="End" />

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Bottom" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="Drawable gravity" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/gravity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="Drawable padding" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/padding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp" />

    </androidx.appcompat.widget.LinearLayoutCompat>


</FrameLayout>